deploy: 6ae656f0c4712c525ec98fbc738d71963c9ea5be

--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/jpg" href="/portfolio/goro71.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Thumbnil for Link Share -->
+    <meta property="og:title" content="Sheng-Kai Wen's Profile"/>
+    <meta property="og:image" content='./public/goro71.jpg' />
+    <meta property="og:description" content="Hi, I'm Sheng-Kai Wen, an computer science student at UMass Amherst." />
+    <meta property="og:url" content="https://shigenogoro.github.io/portfolio/" />
+    <meta property='og:image:width' content='1200' />
+    <meta property='og:image:height' content='627' />
+
     <title>Sheng-Kai(Kyle) Wen</title>
 
     <!-- Google Font for Sono -->
