--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:title" content="Sheng-Kai Wen's Profile"/>
     <meta property="og:image" content='./public/goro71.jpg' />
     <meta property="og:description" content="Hi, I'm Sheng-Kai Wen, an computer science student at UMass Amherst." />
-    <meta property="og:url" content="https://shigenogoro.github.io/portfolio/" />
+    <meta property="og:url" content="https://shigenogoro.github.io/profile/" />
     <meta property='og:image:width' content='1200' />
     <meta property='og:image:height' content='627' />
 
